--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,20 @@
+# Core build tools
 pip>=25.3
 setuptools>=68.0
-wheel>=0.41
+wheel>=0.45
+
+# ML / Data
 numpy==1.25.2
 pandas==2.2.3
 scikit-learn==1.6.1
 catboost==1.2.8
+joblib==1.4.2
+
+# Backend
 fastapi==0.118.0
 uvicorn==0.37.0
 pydantic==2.11.7
 pydantic-core==2.33.2
-joblib==1.4.2
 python-dotenv==1.0.1
 
 
